--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="300" Width="800" Background="LightBlue">
     <Grid>
-      
+        <Button Content="Worker" Margin="214,217,418,10"/>
+        <Button Content="Admin" Click="ButtonWorker_Click" Margin="31,217,601,10"/>
+        <Button Content="INITDB" Click="ButtonINIT_Click" Margin="607,217,25,10"/>
+
+
     </Grid>
+    
 </Window>
