--- a/PL/Worker/WorkerListWindow.xaml
+++ b/PL/Worker/WorkerListWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Worker"
         mc:Ignorable="d"
-        Title="WorkerListWindow" Height="450" Width="800">
+        Title="WorkerListWindow" Height="640" Width="800">
+    <!--External Grid-->
     <Grid>
-        
+        <Grid.RowDefinitions>
+        <RowDefinition Height="40*"/>
+        <RowDefinition Height="500*"/>
+        <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <!--Internal, Upper Grid-->
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <!--Lebel select-->
+            <Label Grid.Column="0">    
+            </Label>
+            <!--filter-->
+            <ComboBox  Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                
+                
+            </ComboBox>
+        </Grid>
+        <ListView Grid.Row="1">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"/>
+
     </Grid>
 </Window>
