--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:FilterWorker x:Key="FilterWorkerKey"/>
+        <local:WorkerExperience x:Key="WorkerExperienceKey"/>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConvert"/>
+
+
     </Application.Resources>
 </Application>
