--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -3,7 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
-         
+        <local:SemestersCollection x:Key="SemestersCollectionKey" />
+        <local:WorkerExperienceCollection x:Key="WorkerExperienceCollectionKey" />
+        <local:ConvertIdToContent x:Key="ConverIdToContentKey"/>
+        <local:ConvertIdToBool x:Key="ConverIdToBoolKey"/>
+
     </Application.Resources>
 </Application>
