I fixed the binding between the fields of the logical entity and the graphic controls

--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -10,8 +10,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button Content="Worker" Margin="214,217,418,10"/>
-        <Button Content="Admin" Click="ButtonWorker_Click" Margin="31,217,601,10"/>
+        <Button Content="Worker" Margin="214,217,418,10" Click="ButtonWorker_Click"/>
+        <Button Content="Admin" Margin="31,217,601,10"/>
         <Button Content="INITDB" Click="ButtonINIT_Click" Margin="607,217,25,10"/>
 
 
