--- a/PL/Worker/WorkerListWindow.xaml
+++ b/PL/Worker/WorkerListWindow.xaml
@@ -27,19 +27,19 @@
             <ComboBox SelectedValue="{Binding Path=filterWorkers, Mode=TwoWay}"
                 ItemsSource="{Binding Source={StaticResource FilterWorkerKey}}"  
                        Grid.Column="1" SelectionChanged="ComboBox_FilterWorkerChanged" Margin="64,5,213,5"/>
-            <ComboBox Visibility="{Binding bylevel, Converter={StaticResource  BoolToVisibilityConvert}}" 
-                ItemsSource="{Binding Source={StaticResource WorkerExperienceKey }}"   Grid.Column="1" Margin="248,10,59,12" />
+            <ComboBox Visibility="{Binding Bylevel,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}" 
+                ItemsSource="{Binding Source={StaticResource WorkerExperienceCollectionKey }}"   Grid.Column="1" Margin="200,12,107,10" SelectionChanged="ComboBox_SelectionChanged" />
 
 
         </Grid>
-        <ListView Grid.Row="1"  ItemsSource="{Binding Path=WorkerList}">
+        <ListView Grid.Row="1"  ItemsSource="{Binding Path=WorkerList}" MouseDoubleClick="ListView_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"/>
+        <Button Content="Add" Grid.Row="1" HorizontalAlignment="Center" Height="50" Width="100" Click="Button_AddClick" Margin="0,471,0,10"/>
 
     </Grid>
 
