I added an option to show list of task with filters and I fixed the read metod of BL layer so it can or return null or throw excpetion (based on wht we want)

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -11,6 +11,8 @@
         <local:ConvertIdToContent x:Key="ConverIdToContentKey"/>
         <local:ConvertIdToBool x:Key="ConverIdToBoolKey"/>
         <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverterKey"/>
+        <local:FilterTask x:Key="FilterTaskKey"/>
+        <local:StatusTaskCollection x:Key="TaskStatusKey"/>
 
     </Application.Resources>
 </Application>
