--- a/PL/Worker/WorkerWindow.xaml
+++ b/PL/Worker/WorkerWindow.xaml
@@ -40,7 +40,7 @@
         <ComboBox 
              ItemsSource="{Binding Source={StaticResource WorkerExperienceCollectionKey}}"
             SelectedValue="{Binding LevelOfWorker, Mode=TwoWay}"
-            HorizontalAlignment="Left" Margin="200,120,0,0" Grid.Row="1" VerticalAlignment="Top" Width="95" Height="25"/>
+            HorizontalAlignment="Left" Margin="200,120,0,0" Grid.Row="1" VerticalAlignment="Top" Width="95" Height="25" SelectionChanged="ComboBox_LevelChangedWorker"/>
         <TextBox 
             Text="{Binding PhoneNumber, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
             HorizontalAlignment="Left" Margin="200,160,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>
